--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        ext: 'png'
       }).addTo(map);
       var home = L.icon({
-        iconUrl: 'images/home.png',
+        iconUrl: 'home.png',
         iconSize: [24,24],
         iconAnchor:  [12, 24], // point of the icon which will correspond to marker's location
         popupAnchor: [-3, -62]  // the same for the shadow
