--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         popupAnchor: [-3, -62]  // the same for the shadow
       });
       var visited = L.icon({
-        iconUrl: 'images/pin.png',
+        iconUrl: 'pin.png',
         iconSize: [24,24],
         iconAnchor:  [12,24], // point of the icon which will correspond to marker's location
         popupAnchor: [-3, -62]  // the same for the shadow
