--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ var legend = L.control({
 });
 legend.onAdd = function(map){
     var div = L.DomUtil.create('div', 'legend');
-    div.innerHTML += '<img src="images/home.png" /> Places I have lived <br /><img src="images/pin.png" />Places I have traveled to <br />';
+    div.innerHTML += '<img src="home.png" /> Places I have lived <br /><img src="pin.png" />Places I have traveled to <br />';
     return div;
 };
 legend.addTo(map);
